# mosdac_chatbot

./: .gitignore  FOLDER_STR.md  main.py  pyproject.toml  this.txt
missions_data/: INSAT-3D-References.json  INSAT-3DS-References.json  Megha-Tropiques-References.json  OCEANSAT-3-References.json  Oceansat-2-References.json  SARAL-References.json  SCATSAT-1-References.json
mosdac_utils/: __init__.py  data_utils.py  rss_utils.py
open_data/atmosphere/: gps-derived-integrated-water-vapour.json  gsmap-isro-rain.json
open_data/atmosphere/metadata/: bayesian-based-mt-saphir-rainfall.json  meteosat8-cloud-properties.json
open_data/land/: 3d-volumetric-terls-dwrproduct.json  inland-water-height.json  soil-moisture-0.json
open_data/ocean/: global-ocean-surface-current.json  high-resolution-sea-surface-salinity.json  ocean-subsurface.json  oceanic-eddies-detection.json  wave-based-renewable-energy.json
raw_data/: INSAT3D-Image_RSS_Feed.csv  INSAT3DR-Imager_RSS_Feed.csv  INSAT3DR-Sounder_RSS_Feed.csv  SCATSAT-1_RSS_Feed.csv  faqs.json  insitu_data.csv  missions_name_url.csv  radar_all_products_data.csv  radar_data.csv  satellite_all_products_data.csv  satellite_ids.csv  satellites_sensors_data.csv
rss_data/: INSAT3D-Sounder_RSS_Feed.csv
scraping_scripts/: RSS_scraping.ipynb  faqs.ipynb  insitu_all_products_data.ipynb  insitu_data.ipynb  misceleneous.ipynb  missions.ipynb  missions_documents.ipynb  opendata_metadata.ipynb  radar_all_products_data.ipynb  radar_data.ipynb  satellite_all_products_data.ipynb  satellite_data.ipynb  satellite_sensors_data.ipynb
(+18 files in other folders)
