[project]
name = "mosdac_data_scraping"
version = "0.1.0"
description = "scraping important data from mosdac"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "requests>=2.32.4",
]
authors = [{ name = "shivam sahu", email = None }]
license = { text = "MIT" }
